Fix tab grid transition bug of grid_cell top bar.

This CLs fixes the bug caused by https://crrev/c/1409546. The tab grid
transition animation is not working well because GridCell.topBarHeight
constraint is not set.

Bug: 922468
Change-Id: I13a9e27ac239ce2eb04240a68d2f6ff3f8996b5f
Reviewed-on: https://chromium-review.googlesource.com/c/1412463
Commit-Queue: Yi Su <mrsuyi@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624106}