ios/chrome/browser/ui/tab_grid/grid/grid_cell.mm
@@ -48,7 +48,7 @@ void PositionView(UIView* view, CGPoint point) {
 @property(nonatomic, strong)
     NSArray<NSLayoutConstraint*>* nonAccessibilityConstraints;
 // Header height of the cell.
-@property(nonatomic, strong) NSLayoutConstraint* topBarHeight;
+@property(nonatomic, strong) NSLayoutConstraint* topBarHeightConstraint;
 // Visual components of the cell.
 @property(nonatomic, weak) UIView* topBar;
 @property(nonatomic, weak) UIImageView* iconView;
@@ -255,8 +255,6 @@ void PositionView(UIView* view, CGPoint point) {
   _closeIconView = closeIconView;
 
   _accessibilityConstraints = @[
-    [topBar.heightAnchor
-        constraintEqualToConstant:kGridCellHeaderAccessibilityHeight],
     [titleLabel.leadingAnchor
         constraintEqualToAnchor:topBar.leadingAnchor
                        constant:kGridCellHeaderLeadingInset],
@@ -265,7 +263,6 @@ void PositionView(UIView* view, CGPoint point) {
   ];
 
   _nonAccessibilityConstraints = @[
-    [topBar.heightAnchor constraintEqualToConstant:kGridCellHeaderHeight],
     [iconView.leadingAnchor
         constraintEqualToAnchor:topBar.leadingAnchor
                        constant:kGridCellHeaderLeadingInset],
@@ -277,7 +274,13 @@ void PositionView(UIView* view, CGPoint point) {
                        constant:kGridCellHeaderLeadingInset],
   ];
 
+  _topBarHeightConstraint =
+      [topBar.heightAnchor constraintEqualToConstant:kGridCellHeaderHeight];
+
+  [self updateTopBar];
+
   NSArray* constraints = @[
+    _topBarHeightConstraint,
     [titleLabel.centerYAnchor constraintEqualToAnchor:topBar.centerYAnchor],
     [titleLabel.trailingAnchor
         constraintEqualToAnchor:closeIconView.leadingAnchor
@@ -298,8 +301,6 @@ void PositionView(UIView* view, CGPoint point) {
                                       forAxis:UILayoutConstraintAxisHorizontal];
   [closeIconView setContentHuggingPriority:UILayoutPriorityRequired
                                    forAxis:UILayoutConstraintAxisHorizontal];
-
-  [self updateTopBar];
   return topBar;
 }
 
@@ -307,6 +308,7 @@ void PositionView(UIView* view, CGPoint point) {
 // font size is chosen, the favicon will be hidden, and the title text will be
 // shown in two lines.
 - (void)updateTopBar {
+  self.topBarHeightConstraint.constant = [self topBarHeight];
   if (UIContentSizeCategoryIsAccessibilityCategory(
           self.traitCollection.preferredContentSizeCategory)) {
     self.titleLabel.numberOfLines = 2;
@@ -357,6 +359,15 @@ void PositionView(UIView* view, CGPoint point) {
 // Selector registered to the close button.
 - (void)closeButtonTapped:(id)sender {
   [self.delegate closeButtonTappedForCell:self];
+}
+
+// Returns the height of top bar in grid cell. The value depends on whether
+// accessibility font size is chosen.
+- (CGFloat)topBarHeight {
+  return UIContentSizeCategoryIsAccessibilityCategory(
+             self.traitCollection.preferredContentSizeCategory)
+             ? kGridCellHeaderAccessibilityHeight
+             : kGridCellHeaderHeight;
 }
 
 @end
@@ -447,7 +458,7 @@ void PositionView(UIView* view, CGPoint point) {
 
 - (void)positionTabViews {
   [self scaleTabViews];
-  self.topBarHeight.constant = self.topTabView.frame.size.height;
+  self.topBarHeightConstraint.constant = self.topTabView.frame.size.height;
   [self setNeedsUpdateConstraints];
   [self layoutIfNeeded];
   PositionView(self.topTabView, CGPointMake(0, 0));
@@ -464,7 +475,7 @@ void PositionView(UIView* view, CGPoint point) {
 
 - (void)positionCellViews {
   [self scaleTabViews];
-  self.topBarHeight.constant = kGridCellHeaderHeight;
+  self.topBarHeightConstraint.constant = [self topBarHeight];
   [self setNeedsUpdateConstraints];
   [self layoutIfNeeded];
   CGFloat yOffset = kGridCellHeaderHeight - self.topTabView.frame.size.height;
